miniextendr-macros/tests/ui/impl_method_error_in_r_unwrap_in_r.stderr
error: `error_in_r` and `unwrap_in_r` are mutually exclusive
  --> tests/ui/impl_method_error_in_r_unwrap_in_r.rs:13:31
   |
13 |     #[miniextendr(error_in_r, unwrap_in_r)]
   |                               ^^^^^^^^^^^
